--- a/src/pages/Navbar.css
+++ b/src/pages/Navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: white;
+  background-color: #d0e8d5;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
   position: fixed;
   top: 0;
