--- a/src/pages/YealthCalendar.css
+++ b/src/pages/YealthCalendar.css
@@ -4,6 +4,7 @@
     margin: 0 auto;
     background-color: #F0F4F8;
     font-family: "Inter", sans-serif;
+    overflow-x: auto;
 }
 
 h2 {
@@ -85,14 +86,18 @@ h2 {
 .day-input-area select {
   font-size: 0.7rem;
   padding: 2px;
+  border-radius: 4px;     
+  border: 1px solid #b0bec5;
+  font-family: "Inter", sans-serif;
 }
 
 .mini-input {
-  width: 100%;
+  width: 94%;
   font-size: 0.8rem;
   border: 1px solid #ccc;
   border-radius: 3px;
   padding: 3px;
+  font-family: "Inter", sans-serif;
 }
 
 .buttons {
