--- a/src/pages/YealthCalendar.css
+++ b/src/pages/YealthCalendar.css
@@ -28,6 +28,21 @@ h2 {
   cursor: pointer;
 }
 
+.type-creator input[type="text"] {
+  width: 200px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  background-color: white;
+  color: black;
+  border: 2px solid #2B3040;
+  outline: none;
+  cursor: text;
+}
+
+.type-creator input[type="text"]:focus {
+  border-color: #596A95;
+}
+
 .week-days, .calendar-grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
